style is moved to a css file

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>Rocket Dashboard</title>
   </head>
   <body>
-    <div id="root" style="background: #fdfdfd"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
